# baboon-web

./: .gitignore  README.md  config.py  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/local-features/rye/: install.sh
app/: .flaskenv  __init__.py  baboon_web.py  models.py  routes.py
app/api/: __init__.py  errors.py  raids.py  tokens.py
app/main/: routes.py
app/poller/: poller.py
app/poller/raid_helper/: api.py
app/static/: styles.css
app/templates/: _player.html  admin_players.html  admin_raids.html  app.html  base.html  debug.html  index.html  login.html  players.html  raids.html  signups.html
app/templates/errors/: 404.html  500.html
