[project]
name = "BaboonWeb"
requires-python = ">= 3.12"
version = "0.1"

dependencies = [
    "flask>=3.0.3",
    "flask-wtf>=1.2.1",
]

[tool.rye]
dev-dependencies = [
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "httpie>=3.2.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.7",
]
